vpc_gw.tf
resource "aws_internet_gateway" "myig" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "myig"
  }
}
